--- a/assets/application.css
+++ b/assets/application.css
@@ -818,6 +818,12 @@ body {
 
 .main-btn {
   font-family: var(--font-heading-family);
+  transition: background 0.3s ease-in-out;
+}
+
+.main-btn:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(72 97 113 / var(--tw-bg-opacity));
 }
 
 .header-wrapper .main-btn {
@@ -972,8 +978,15 @@ body {
 
 .arrow-btn::after {
   margin-left: 8px;
+  display: inline-block;
   vertical-align: middle;
+  transition: transform 0.3s ease-in-out;
   content: url("data:image/svg+xml,%3Csvg width='36' height='36' viewBox='0 0 36 36' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M10.5 25.5L25.5 10.5M25.5 10.5H10.5M25.5 10.5V25.5' stroke='%23E0E0D6' stroke-width='4' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E%0A");
+}
+
+.arrow-btn:hover::after {
+  --tw-rotate: 45deg;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 .arrow-btn.red-variant::after {
@@ -1404,6 +1417,12 @@ body {
   padding-left: 25px;
   padding-right: 25px;
   opacity: 1;
+  transition: background 0.3s ease-in-out;
+}
+
+.products-slider .products-slider-wrapper button:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(72 97 113 / var(--tw-bg-opacity));
 }
 
 .products-slider .products-slider-wrapper .content {
@@ -2338,8 +2357,14 @@ body {
   position: relative;
   margin-left: 8px;
   box-shadow: none;
+  transition: transform 0.3s ease-in-out;
   vertical-align: middle;
   content: url("data:image/svg+xml,%3Csvg width='36' height='36' viewBox='0 0 36 36' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M10.5 25.5L25.5 10.5M25.5 10.5H10.5M25.5 10.5V25.5' stroke='%23E0E0D6' stroke-width='4' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E%0A");
+}
+
+.image-banner-section .button.button--secondary:hover::after {
+  --tw-rotate: 45deg;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 .image-banner-section .banner__box > * + .banner__buttons {
@@ -3013,6 +3038,12 @@ body {
 
 .product-container .button {
   letter-spacing: 0px;
+  transition: background 0.3s ease-in-out;
+}
+
+.product-container .button:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(72 97 113 / var(--tw-bg-opacity));
 }
 
 .product-container .button::before,
